Projects/FSHpp/Antlr/FSHParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FSH.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FSHpp {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class FSHParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KW_ALIAS=1, KW_PROFILE=2, KW_EXTENSION=3, KW_INSTANCE=4, KW_INSTANCEOF=5, 
		KW_INVARIANT=6, KW_VALUESET=7, KW_CODESYSTEM=8, KW_RULESET=9, KW_MAPPING=10, 
		KW_MIXINS=11, KW_PARENT=12, KW_ID=13, KW_TITLE=14, KW_DESCRIPTION=15, 
		KW_EXPRESSION=16, KW_XPATH=17, KW_SEVERITY=18, KW_USAGE=19, KW_SOURCE=20, 
		KW_TARGET=21, KW_MOD=22, KW_MS=23, KW_SU=24, KW_TU=25, KW_NORMATIVE=26, 
		KW_DRAFT=27, KW_FROM=28, KW_EXAMPLE=29, KW_PREFERRED=30, KW_EXTENSIBLE=31, 
		KW_REQUIRED=32, KW_CONTAINS=33, KW_NAMED=34, KW_AND=35, KW_ONLY=36, KW_OR=37, 
		KW_OBEYS=38, KW_TRUE=39, KW_FALSE=40, KW_EXCLUDE=41, KW_CODES=42, KW_WHERE=43, 
		KW_VSREFERENCE=44, KW_SYSTEM=45, KW_UNITS=46, KW_EXACTLY=47, EQUAL=48, 
		STAR=49, COLON=50, COMMA=51, ARROW=52, STRING=53, MULTILINE_STRING=54, 
		NUMBER=55, UNIT=56, CODE=57, CONCEPT_STRING=58, DATETIME=59, TIME=60, 
		CARD=61, REFERENCE=62, CARET_SEQUENCE=63, REGEX=64, COMMA_DELIMITED_CODES=65, 
		COMMA_DELIMITED_SEQUENCES=66, SEQUENCE=67, WHITESPACE=68, BLOCK_COMMENT=69, 
		LINE_COMMENT=70;
	public const int
		RULE_doc = 0, RULE_entity = 1, RULE_alias = 2, RULE_profile = 3, RULE_extension = 4, 
		RULE_sdMetadata = 5, RULE_sdRule = 6, RULE_instance = 7, RULE_instanceMetadata = 8, 
		RULE_invariant = 9, RULE_invariantMetadata = 10, RULE_valueSet = 11, RULE_vsMetadata = 12, 
		RULE_codeSystem = 13, RULE_csMetadata = 14, RULE_ruleSet = 15, RULE_mapping = 16, 
		RULE_mappingMetadata = 17, RULE_parent = 18, RULE_id = 19, RULE_title = 20, 
		RULE_description = 21, RULE_expression = 22, RULE_xpath = 23, RULE_severity = 24, 
		RULE_instanceOf = 25, RULE_usage = 26, RULE_mixins = 27, RULE_mixin = 28, 
		RULE_source = 29, RULE_target = 30, RULE_cardRule = 31, RULE_flagRule = 32, 
		RULE_valueSetRule = 33, RULE_fixedValueRule = 34, RULE_containsRule = 35, 
		RULE_onlyRule = 36, RULE_obeysRule = 37, RULE_caretValueRule = 38, RULE_mappingRule = 39, 
		RULE_vsComponent = 40, RULE_vsConceptComponent = 41, RULE_vsFilterComponent = 42, 
		RULE_vsComponentFrom = 43, RULE_vsFromSystem = 44, RULE_vsFromValueset = 45, 
		RULE_vsFilterList = 46, RULE_vsFilterDefinition = 47, RULE_vsFilterOperator = 48, 
		RULE_vsFilterValue = 49, RULE_path = 50, RULE_paths = 51, RULE_caretPath = 52, 
		RULE_flag = 53, RULE_strength = 54, RULE_value = 55, RULE_item = 56, RULE_code = 57, 
		RULE_concept = 58, RULE_quantity = 59, RULE_ratio = 60, RULE_reference = 61, 
		RULE_ratioPart = 62, RULE_bool = 63, RULE_targetType = 64;
	public static readonly string[] ruleNames = {
		"doc", "entity", "alias", "profile", "extension", "sdMetadata", "sdRule", 
		"instance", "instanceMetadata", "invariant", "invariantMetadata", "valueSet", 
		"vsMetadata", "codeSystem", "csMetadata", "ruleSet", "mapping", "mappingMetadata", 
		"parent", "id", "title", "description", "expression", "xpath", "severity", 
		"instanceOf", "usage", "mixins", "mixin", "source", "target", "cardRule", 
		"flagRule", "valueSetRule", "fixedValueRule", "containsRule", "onlyRule", 
		"obeysRule", "caretValueRule", "mappingRule", "vsComponent", "vsConceptComponent", 
		"vsFilterComponent", "vsComponentFrom", "vsFromSystem", "vsFromValueset", 
		"vsFilterList", "vsFilterDefinition", "vsFilterOperator", "vsFilterValue", 
		"path", "paths", "caretPath", "flag", "strength", "value", "item", "code", 
		"concept", "quantity", "ratio", "reference", "ratioPart", "bool", "targetType"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'?!'", "'MS'", 
		"'SU'", "'TU'", "'N'", "'D'", "'from'", null, null, null, null, "'contains'", 
		"'named'", "'and'", "'only'", "'or'", "'obeys'", "'true'", "'false'", 
		"'exclude'", "'codes'", "'where'", "'valueset'", "'system'", "'units'", 
		null, "'='", null, "':'", "','", "'->'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KW_ALIAS", "KW_PROFILE", "KW_EXTENSION", "KW_INSTANCE", "KW_INSTANCEOF", 
		"KW_INVARIANT", "KW_VALUESET", "KW_CODESYSTEM", "KW_RULESET", "KW_MAPPING", 
		"KW_MIXINS", "KW_PARENT", "KW_ID", "KW_TITLE", "KW_DESCRIPTION", "KW_EXPRESSION", 
		"KW_XPATH", "KW_SEVERITY", "KW_USAGE", "KW_SOURCE", "KW_TARGET", "KW_MOD", 
		"KW_MS", "KW_SU", "KW_TU", "KW_NORMATIVE", "KW_DRAFT", "KW_FROM", "KW_EXAMPLE", 
		"KW_PREFERRED", "KW_EXTENSIBLE", "KW_REQUIRED", "KW_CONTAINS", "KW_NAMED", 
		"KW_AND", "KW_ONLY", "KW_OR", "KW_OBEYS", "KW_TRUE", "KW_FALSE", "KW_EXCLUDE", 
		"KW_CODES", "KW_WHERE", "KW_VSREFERENCE", "KW_SYSTEM", "KW_UNITS", "KW_EXACTLY", 
		"EQUAL", "STAR", "COLON", "COMMA", "ARROW", "STRING", "MULTILINE_STRING", 
		"NUMBER", "UNIT", "CODE", "CONCEPT_STRING", "DATETIME", "TIME", "CARD", 
		"REFERENCE", "CARET_SEQUENCE", "REGEX", "COMMA_DELIMITED_CODES", "COMMA_DELIMITED_SEQUENCES", 
		"SEQUENCE", "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FSH.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FSHParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FSHParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FSHParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(FSHParser.Eof, 0); }
		public EntityContext[] entity() {
			return GetRuleContexts<EntityContext>();
		}
		public EntityContext entity(int i) {
			return GetRuleContext<EntityContext>(i);
		}
		public DocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_doc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterDoc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitDoc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocContext doc() {
		DocContext _localctx = new DocContext(Context, State);
		EnterRule(_localctx, 0, RULE_doc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ALIAS) | (1L << KW_PROFILE) | (1L << KW_EXTENSION) | (1L << KW_INSTANCE) | (1L << KW_INVARIANT) | (1L << KW_VALUESET) | (1L << KW_CODESYSTEM) | (1L << KW_RULESET) | (1L << KW_MAPPING))) != 0)) {
				{
				{
				State = 130; entity();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 136; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityContext : ParserRuleContext {
		public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		public ProfileContext profile() {
			return GetRuleContext<ProfileContext>(0);
		}
		public ExtensionContext extension() {
			return GetRuleContext<ExtensionContext>(0);
		}
		public InvariantContext invariant() {
			return GetRuleContext<InvariantContext>(0);
		}
		public InstanceContext instance() {
			return GetRuleContext<InstanceContext>(0);
		}
		public ValueSetContext valueSet() {
			return GetRuleContext<ValueSetContext>(0);
		}
		public CodeSystemContext codeSystem() {
			return GetRuleContext<CodeSystemContext>(0);
		}
		public RuleSetContext ruleSet() {
			return GetRuleContext<RuleSetContext>(0);
		}
		public MappingContext mapping() {
			return GetRuleContext<MappingContext>(0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterEntity(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitEntity(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityContext entity() {
		EntityContext _localctx = new EntityContext(Context, State);
		EnterRule(_localctx, 2, RULE_entity);
		try {
			State = 147;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_ALIAS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 138; alias();
				}
				break;
			case KW_PROFILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139; profile();
				}
				break;
			case KW_EXTENSION:
				EnterOuterAlt(_localctx, 3);
				{
				State = 140; extension();
				}
				break;
			case KW_INVARIANT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 141; invariant();
				}
				break;
			case KW_INSTANCE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 142; instance();
				}
				break;
			case KW_VALUESET:
				EnterOuterAlt(_localctx, 6);
				{
				State = 143; valueSet();
				}
				break;
			case KW_CODESYSTEM:
				EnterOuterAlt(_localctx, 7);
				{
				State = 144; codeSystem();
				}
				break;
			case KW_RULESET:
				EnterOuterAlt(_localctx, 8);
				{
				State = 145; ruleSet();
				}
				break;
			case KW_MAPPING:
				EnterOuterAlt(_localctx, 9);
				{
				State = 146; mapping();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AliasContext : ParserRuleContext {
		public ITerminalNode KW_ALIAS() { return GetToken(FSHParser.KW_ALIAS, 0); }
		public ITerminalNode[] SEQUENCE() { return GetTokens(FSHParser.SEQUENCE); }
		public ITerminalNode SEQUENCE(int i) {
			return GetToken(FSHParser.SEQUENCE, i);
		}
		public ITerminalNode EQUAL() { return GetToken(FSHParser.EQUAL, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alias; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterAlias(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitAlias(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AliasContext alias() {
		AliasContext _localctx = new AliasContext(Context, State);
		EnterRule(_localctx, 4, RULE_alias);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; Match(KW_ALIAS);
			State = 150; Match(SEQUENCE);
			State = 151; Match(EQUAL);
			State = 152; Match(SEQUENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProfileContext : ParserRuleContext {
		public ITerminalNode KW_PROFILE() { return GetToken(FSHParser.KW_PROFILE, 0); }
		public ITerminalNode SEQUENCE() { return GetToken(FSHParser.SEQUENCE, 0); }
		public SdMetadataContext[] sdMetadata() {
			return GetRuleContexts<SdMetadataContext>();
		}
		public SdMetadataContext sdMetadata(int i) {
			return GetRuleContext<SdMetadataContext>(i);
		}
		public SdRuleContext[] sdRule() {
			return GetRuleContexts<SdRuleContext>();
		}
		public SdRuleContext sdRule(int i) {
			return GetRuleContext<SdRuleContext>(i);
		}
		public ProfileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_profile; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterProfile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitProfile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProfile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProfileContext profile() {
		ProfileContext _localctx = new ProfileContext(Context, State);
		EnterRule(_localctx, 6, RULE_profile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154; Match(KW_PROFILE);
			State = 155; Match(SEQUENCE);
			State = 157;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 156; sdMetadata();
				}
				}
				State = 159;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_MIXINS) | (1L << KW_PARENT) | (1L << KW_ID) | (1L << KW_TITLE) | (1L << KW_DESCRIPTION))) != 0) );
			State = 164;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==STAR) {
				{
				{
				State = 161; sdRule();
				}
				}
				State = 166;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExtensionContext : ParserRuleContext {
		public ITerminalNode KW_EXTENSION() { return GetToken(FSHParser.KW_EXTENSION, 0); }
		public ITerminalNode SEQUENCE() { return GetToken(FSHParser.SEQUENCE, 0); }
		public SdMetadataContext[] sdMetadata() {
			return GetRuleContexts<SdMetadataContext>();
		}
		public SdMetadataContext sdMetadata(int i) {
			return GetRuleContext<SdMetadataContext>(i);
		}
		public SdRuleContext[] sdRule() {
			return GetRuleContexts<SdRuleContext>();
		}
		public SdRuleContext sdRule(int i) {
			return GetRuleContext<SdRuleContext>(i);
		}
		public ExtensionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_extension; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterExtension(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitExtension(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExtension(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExtensionContext extension() {
		ExtensionContext _localctx = new ExtensionContext(Context, State);
		EnterRule(_localctx, 8, RULE_extension);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167; Match(KW_EXTENSION);
			State = 168; Match(SEQUENCE);
			State = 172;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_MIXINS) | (1L << KW_PARENT) | (1L << KW_ID) | (1L << KW_TITLE) | (1L << KW_DESCRIPTION))) != 0)) {
				{
				{
				State = 169; sdMetadata();
				}
				}
				State = 174;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 178;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==STAR) {
				{
				{
				State = 175; sdRule();
				}
				}
				State = 180;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SdMetadataContext : ParserRuleContext {
		public ParentContext parent() {
			return GetRuleContext<ParentContext>(0);
		}
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public TitleContext title() {
			return GetRuleContext<TitleContext>(0);
		}
		public DescriptionContext description() {
			return GetRuleContext<DescriptionContext>(0);
		}
		public MixinsContext mixins() {
			return GetRuleContext<MixinsContext>(0);
		}
		public SdMetadataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sdMetadata; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.EnterSdMetadata(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFSHListener typedListener = listener as IFSHListener;
			if (typedListener != null) typedListener.ExitSdMetadata(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFSHVisitor<TResult> typedVisitor = visitor as IFSHVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSdMetadata(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SdMetadataContext sdMetadata() {
		SdMetadataContext _localctx = new SdMetadataContext(Context, State);
		EnterRule(_localctx, 10, RULE_sdMetadata);
		try {
			State = 186;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_PARENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 181; parent();
				}
				break;
			case KW_ID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 182; id();
				}
				break;
			case KW_TITLE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 183; title();
				}
				break;
			case KW_DESCRIPTION:
				EnterOuterAlt(_localctx, 4);
				{
				State = 184; description();
				}
				break;
			case KW_MIXINS:
				EnterOuterAlt(_localctx, 5);
				{
				State = 185; mixins();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
